force-app/main/default/objects/vf_Activity__c/vf_Activity__c.object-meta.xml
<CustomObject>
    <label>Activity</label>
    <pluralLabel>Activities</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Activity Number</label>
        <displayFormat>ACT-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Object to track volunteer activity and hours</description>
</CustomObject>