force-app/main/default/objects/vf_Activity__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Service</fullName>
                <default>true</default>
                <label>Direct Service</label>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of activity performed</description>
    <inlineHelpText>The type of activity that was performed</inlineHelpText>
</CustomField>