force-app/main/default/objects/vf_Activity__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
    <description>Date the activity was performed</description>
    <inlineHelpText>The date when this activity was performed</inlineHelpText>
</CustomField>