force-app/main/default/objects/vf_Activity__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Description of the activity performed</description>
    <inlineHelpText>Detailed description of what was done during this activity</inlineHelpText>
</CustomField>