force-app/main/default/objects/vf_Activity__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <label>Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
    <description>Number of hours spent on the activity</description>
    <inlineHelpText>The number of hours spent on this activity</inlineHelpText>
</CustomField>