force-app/main/default/objects/vf_Activity__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>vf_Project__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
    <description>Project the activity was performed for</description>
    <inlineHelpText>The project this activity was performed for</inlineHelpText>
</CustomField>