force-app/main/default/objects/vf_Activity__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <label>Volunteer</label>
    <referenceTo>vf_Volunteer__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
    <description>Volunteer who performed the activity</description>
    <inlineHelpText>The volunteer who logged this activity</inlineHelpText>
</CustomField>